Fixed the bug for sorting and also added the float values for conversion